# SCU

./: README.md
Grade2/OS/: 【2024纠正版】操作系统练习册(最新版).docx  【2024纠正版】操作系统练习册答案(最新版).docx
Grade2/OS实验/2023141460228_许涛_第一次实践报告/: Makefile  greeting.c  greeting.h  myapp.c
Grade2/OS实验/2023141460228_许涛_第七次实践报告/: 2023141460228_许涛_第七次实践报告.docx  2023141460228_许涛_第七次实践报告（失败）.docx
Grade2/OS实验/2023141460228_许涛_第三次实践报告/: 2023141460228_许涛_第三次实践报告.docx  code.c
Grade2/OS实验/2023141460228_许涛_第二次实践报告/: 1.c  2.c  2023141460228_许涛_第二次实践报告.docx
Grade2/OS实验/2023141460228_许涛_第五次实践报告/: 2023141460228_许涛_第五次实践报告.docx  code.c
Grade2/OS实验/2023141460228_许涛_第八次实践报告/: 2023141460228_许涛_第八次实践报告.docx
Grade2/OS实验/2023141460228_许涛_第六次实践报告/: 2023141460228_许涛_第六次实践报告.docx  code.c
Grade2/OS实验/Course_design_code/: CMakeLists.txt  test.cpp  奖励实验-个人报告-封欢欢-2022141460180.doc
Grade2/OS实验/Course_design_code/The_fourth_course_design/: CMakeLists.txt  main.cpp  mine_choose.cpp  实验4-个人报告-封欢欢-2022141460180.doc  计算机学院实验报告格式-A4-个人.doc
Grade2/OS实验/Course_design_code/The_fourth_course_design/Test4_code/: memoryAlloc.cpp  memoryAlloc.txt  virtumem.cpp
Grade2/OS实验/Course_design_code/The_fourth_course_design/teamwork/: teamwork1.cpp  teamwork2.cpp  实验4-小组报告-史臻泽-2022141460150.doc
Grade2/OS实验/Course_design_code/The_second_course_design/: CMakeLists.txt  data.txt  debug.cpp  实验2-个人报告-封欢欢-2022141460180.doc
Grade2/OS实验/Course_design_code/The_third_course_design/: CMakeLists.txt  Producers_Consumers.cpp  Writer_Reader.cpp  data.txt  data2.txt
Grade2/习概/: 2025年春概论教学问题.docx
(+9 files in other folders)
